--- a/DataBuku.html
+++ b/DataBuku.html
@@ -23,10 +23,8 @@
         </div>
     </div>
     <div class="background">
-        <div class="background2"><p>Data Siswa</p></div>
-        <div class="background3">
-            
-        </div>
+        <div class="background2"><p>Data Buku</p></div>
+        <div class="background3"></div>
     </div>
     <div class="dashbord">
         <h3>Dashboard</h3>
